#3 header, navbar og bakgrunn

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,36 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.app {
+  background-color: #DFAE74;
+  height: 100vh;
+}
+
+.header {
+  position: relative;
+  text-align: center;
+  width: 100vw;
+}
+
+.header-text {
+  position: absolute;
+  top: 50%;
+  left: 25vw;
+  transform: translate(-50%, -50%);
+  font-family: "Arial Black", Gadget, sans-serif;
+  font-size: 100px;
+}
+
+.header-img {
+  width: 100vw;
+  height: 500px;
+  background: url(Components/pangea.png);
+  background-size: cover;
+}
+
+/*.Navbar.brand {
+  background: url(Components/pin.jpg);
+  width: 50px;
+  height: 50px;
+}*/
