--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -29,15 +29,21 @@ code {
   left: 25vw;
   transform: translate(-50%, -50%);
   font-family: "Arial Black", Gadget, sans-serif;
-  font-size: 100px;
+  font-size: 10vw;
 }
-
+/*
 .header-img {
   width: 100vw;
   height: 500px;
   background: url(Components/pangea.png);
   background-size: cover;
+}*/
+
+img {
+  max-width: 100%;
+  height: auto;
 }
+
 
 /*.Navbar.brand {
   background: url(Components/pin.jpg);
